(Issue #6) Remove white space below nav buttons

--- a/app/css/mobile.css
+++ b/app/css/mobile.css
@@ -162,7 +162,6 @@ h1 > div {
 
 div.centered {
 	width: 100%;
-	height: 300px;
 	padding: 20px;
 	text-align: center;
 	margin-left: auto;
